# rknn_model_zoo_EMdoor

./: .gitignore  build-android-my-interface.sh  build-android-my-program.sh  build-android.sh  build-linux-my-interface.sh  build-linux-my-program.sh  build-linux.sh  my_command
My_AI_interface/yolov8_CarpetDetectProject copy/config/: cfg.txt
My_AI_interface/yolov8_CarpetDetectProject copy/cpp/: CMakeLists_origin.txt
My_AI_interface/yolov8_CarpetDetectProject copy/cpp/include/: carpet_detect_interface.h  detect_context.h  postprocess.h  types.h
My_AI_interface/yolov8_CarpetDetectProject copy/cpp/src/: carpet_detect_interface.cc  main.cc  postprocess.cc  transform_coordinates.cc
My_AI_interface/yolov8_CarpetDetectProject copy/cpp/src/rknpu2/: yolov8_detect.cc
My_AI_interface/yolov8_CarpetDetectProject/config/: cfg.txt
My_AI_interface/yolov8_CarpetDetectProject/cpp/: CMakeLists.txt
My_AI_interface/yolov8_CarpetDetectProject/cpp/include/: carpet_detect_interface.h  postprocess.h  types.h
My_AI_interface/yolov8_CarpetDetectProject/cpp/src/: main.cc
My_AI_interface/yolov8_CarpetDetectProject/cpp/src/rknpu1/: yolov8.cc
My_AI_interface/yolov8_CarpetDetectProject/cpp/src/rknpu2/: yolov8_detect.cc
My_AI_interface/yolov8_CarpetDetectProject_copy_ok/cpp/include/: carpet_detect_interface.h  postprocess.h  yolov8_detect.h
My_AI_interface/yolov8_CarpetDetectProject_copy_ok/cpp/src/: carpet_detect_interface.cc  transform_coordinates.cc
My_AI_interface/yolov8_CarpetSegmentProject/: my_command
My_AI_interface/yolov8_CarpetSegmentProject/config/: cfg.txt
My_AI_interface/yolov8_CarpetSegmentProject/cpp/: CMakeLists.txt
My_AI_interface/yolov8_CarpetSegmentProject/cpp/include/: carpet_detect_interface.h  postprocess.h  transform_coordinates.h  types.h
My_AI_interface/yolov8_CarpetSegmentProject/cpp/src/: carpet_detect_interface.cc  main.cc  postprocess.cc  transform_coordinates.cc
My_AI_interface/yolov8_CarpetSegmentProject/cpp/src/rknpu2/: yolov8_detect.cc  yolov8_zero_copy.cc
My_AI_interface/yolov8_HandDetectProject/config/: cfg.txt  cfg_andriod.txt
My_AI_interface/yolov8_HandDetectProject/cpp/: CMakeLists.txt
My_AI_interface/yolov8_HandDetectProject/cpp/include/: debug.h  event_control.h  hand_detect_interface.h  logs.h  postprocess.h  transform_coordinates.h  types.h  version.h  yolov8_detect.h
My_AI_interface/yolov8_HandDetectProject/cpp/src/: debug.cc  event_control.cc  hand_detect_interface copy.cc  hand_detect_interface.cc  main copy.cc  main.cc  postprocess.cc  transform_coordinates.cc  version.h.in
My_AI_interface/yolov8_HandDetectProject/cpp/src/rknpu2/: yolov8_detect.cc
My_AI_process/yolov8_CarpetDetectProject/config/: cfg.txt
My_AI_process/yolov8_CarpetDetectProject/cpp/: CMakeLists.txt
My_AI_process/yolov8_CarpetDetectProject/cpp/include/: postprocess.h  transform_coordinates.h  types.h
My_AI_process/yolov8_CarpetDetectProject/cpp/src/: main.cc  main_muiti_images.cc  transform_coordinates.cc
My_AI_process/yolov8_CarpetDetectProject/cpp/src/rknpu2/: yolov8.cc  yolov8_detect.cc
My_AI_process/yolov8_WireDetectProject/config/: cfg.txt
My_AI_process/yolov8_WireDetectProject/cpp/: CMakeLists.txt
My_AI_process/yolov8_WireDetectProject/cpp/include/: postprocess.h  types.h
My_AI_process/yolov8_WireDetectProject/cpp/src/: main.cc  postprocess.cc
My_AI_process/yolov8_WireDetectProject/cpp/src/rknpu2/: yolov8_detect.cc
catkin_ws/: my_commond
catkin_ws/Project_Release_Folder/CarpetSegmentProject/: Readme
catkin_ws/Project_Release_Folder/CarpetSegmentProject/src/carpet_detect_subscriber/: CMakeLists.txt  package.xml
catkin_ws/Project_Release_Folder/CarpetSegmentProject/src/carpet_detect_subscriber/scripts/: run.sh
catkin_ws/Project_Release_Folder/CarpetSegmentProject/src/carpet_detect_subscriber/src/: subscriber_operation.cpp
catkin_ws/carpet_detect_add_edge_point_subscriber_main/: my_commond  run.sh
catkin_ws/carpet_detect_add_edge_point_subscriber_main/devel/: .catkin  .rosinstall  local_setup.fish  local_setup.sh  setup.fish  setup.sh
catkin_ws/carpet_detect_add_edge_point_subscriber_main/devel/include/carpet_detect_msgs/: CameraCoordinate.h  ObjectCameraDetectResult.h  ObjectCameraDetectResultArray.h
catkin_ws/carpet_detect_add_edge_point_subscriber_main/devel/lib/carpet_detect_subscriber/: carpet_detect_listener
catkin_ws/carpet_detect_interface/src/carpet_detect_subscriber/: CMakeLists.txt  package.xml
catkin_ws/carpet_detect_interface/src/carpet_detect_subscriber/include/: carpet_detect_interface.h
catkin_ws/carpet_detect_interface/src/carpet_detect_subscriber/src/: carpet_detect_interface.cpp  main_subscriber_node.cpp  subscriber_operation.cpp
catkin_ws/carpet_detect_subscriber_demo/: my_commond
catkin_ws/carpet_detect_subscriber_demo/src/carpet_detect_subscriber/: CMakeLists.txt
catkin_ws/carpet_detect_subscriber_demo/src/carpet_detect_subscriber/include/: subscriber_operation.h
catkin_ws/carpet_detect_subscriber_main/: my_commond
catkin_ws/carpet_detect_subscriber_main/src/carpet_detect_msgs/: CMakeLists.txt  package.xml
catkin_ws/carpet_detect_subscriber_main/src/carpet_detect_subscriber/: CMakeLists.txt
catkin_ws/carpet_detect_subscriber_main/src/carpet_detect_subscriber/include/: carpet_detect_interface.h  subscriber_operation.h
catkin_ws/carpet_detect_subscriber_main/src/carpet_detect_subscriber/src/: subscriber_operation.cpp
catkin_ws/test_subscriber_demo/src/my_image_pkg/: CMakeLists.txt  package.xml
catkin_ws/test_subscriber_demo/src/my_image_pkg/src/: image_subscriber_node.cpp
docs/: Compilation_Environment_Setup_Guide_CN.md
examples/yolov8/python/: my_command
examples/yolov8_WireDetect/cpp/: CMakeLists.txt  main.cc
examples/yolov8_WireDetect/python/: yolov8.py
examples/yolov8_seg/: README.md
examples/yolov8_seg_carpet/cpp/: postprocess.h
py_utils/: rknn_executor.py
third_tools/: capture_video.cpp  third_tools_command
utils/: CMakeLists.txt  common.h  file_utils.c  image_utils copy.c  image_utils.c  image_utils.h
(+37 files in other folders)
